# prometheus-haskell

./: .gitignore  cabal.project  stack.yaml
.github/workflows/: ci.yml
prometheus-client-extra/: CHANGELOG.md  Readme.markdown  prometheus-client-extra.cabal
prometheus-client-extra/benchmarks/: Main.hs
prometheus-client-extra/src/Prometheus/Metric/: IntCounter.hs  IntGauge.hs  WindowGauge.hs
prometheus-client-extra/tests/: doctest.hs
prometheus-metrics-ghc/: CHANGELOG.md  README.markdown  prometheus-metrics-ghc.cabal
prometheus-metrics-ghc/benchmark/: Main.hs  Readme.markdown  criterion.hs
prometheus-metrics-ghc/cbits/: gc_extra_hook.c
prometheus-metrics-ghc/includes/: gc_extra.h
prometheus-metrics-ghc/src/Prometheus/Metric/: GHC.hs
prometheus-metrics-ghc/src/Prometheus/Metric/GHC/: Internal.hsc
prometheus-metrics-ghc/tests/: doctest.hs
