cabal-version:       >=2.0
name:                prometheus-client-extra
version:             0.1.0.0
synopsis:            Additional functionality for prometheus-client
description:         This package provides an additional functionality to the prometheus.
                     Check readme for better description and tutorial.
homepage:            https://github.com/qnikst/prometheus-haskell
bug-reports:         https://github.com/qnikst/prometheus-client/issues
license:             Apache-2.0
license-file:        LICENSE
author:              Alexander Vershilov
maintainer:          alexander.vershilov@gmail.com
copyright:           2020 (C) Alexander Vershilov
category:            Monitoring
build-type:          Custom
extra-source-files:  CHANGELOG.md
                     Readme.markdown

custom-setup
  setup-depends:
     Cabal
   , base
   , cabal-doctest >= 1.0.2 && < 1.1

library
  hs-source-dirs:      src/
  default-language:    Haskell2010
  exposed-modules:
    Prometheus.Metric.IntCounter
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.11 && <5,
                       atomic-primops >= 0.8 && <0.9,
                       prometheus-client,
                       utf8-string >= 1.0 && <1.1

  ghc-options: -Wall

test-suite doctests
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: tests
  ghc-options: -Wall
  main-is: doctest.hs
  -- autogen-modules: Build_doctest
  build-depends:  base>=4.11 && <5, doctest
  

benchmark bench
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: benchmarks
  main-is: Main.hs
  build-depends:
      base >= 4.11 && <5
    , criterion
    , prometheus-client
    , prometheus-client-extra
  ghc-options: -Wall
