name:                prometheus-metrics-ghc
version:             1.1.0
synopsis:
    Metrics exposing GHC runtime information for use with prometheus-client.
description:
    Metrics exposing GHC runtime information for use with prometheus-client.
homepage:            https://github.com/fimad/prometheus-haskell
license:             Apache-2.0
license-file:        LICENSE
author:              Will Coster
maintainer:          willcoster@gmail.com
copyright:           2015 Will Coster, 2020 Alexander Vershilov
category:            Network
build-type:          Custom
cabal-version:       >=2.0
extra-source-files:  CHANGELOG.md
                     Readme.markdown
                     img/1.png
                     img/2.png

custom-setup
  setup-depends:
      Cabal
    , base
    , cabal-doctest >=1.0.2 && <1.1

source-repository upstream
  type:     git
  location: https://github.com/fimad/prometheus-haskell

source-repository head
  type:     git
  location: https://github.com/qnikst/prometheus-haskell

library
  hs-source-dirs:      src/
  c-sources:           cbits/gc_extra_hook.c
  include-dirs:        includes/
  default-language:    Haskell2010
  exposed-modules:
      Prometheus.Metric.GHC
      Prometheus.Metric.GHC.Internal
  build-depends:
      base               >=4.11 && <5
    , prometheus-client  >=1.0.0 && <1.1
    , utf8-string        >=0.3
    , text
  ghc-options: -Wall

test-suite doctests
  buildable: False
  type: exitcode-stdio-1.0
  main-is: doctest.hs
  hs-source-dirs: tests
  autogen-modules: Build_doctests
  ghc-options: -Wall
  build-depends:
      base               >=4.11 && <5
    , doctest
  default-language: Haskell2010
